<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context="com.example.whitepaw.myblackjack.GameActivity">


    <Button
        android:id="@+id/hit_button"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="106dp"
        android:onClick="onClickHitButton"
        android:text="@string/hit_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <Button
        android:id="@+id/hold_button"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="106dp"
        android:onClick="onClickHoldButton"
        android:text="@string/hold_button"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/hand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="90dp"
        android:text="@string/hand_text"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="22dp"
        tools:text="@string/result_text"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hand_value" />

    <TextView
        android:id="@+id/hand_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="23dp"
        android:text="@string/hand_value"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hand_text" />

    <TextView
        android:id="@+id/dealer_hand_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="109dp"
        android:text="@string/hand_value"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hand_text" />

    <Button
        android:id="@+id/restart"
        android:layout_width="131dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="43dp"
        android:onClick="onReset"
        android:text="@string/restart"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        tools:text="@string/restart"
        tools:visibility="visible"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/name_game_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Name"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/hand_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dealer_hand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="45dp"
        android:text="@string/dealer_hand_value"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />


</android.support.constraint.ConstraintLayout>
